--- a/index.html
+++ b/index.html
@@ -1,118 +1,99 @@
-<!DOCTYPE html>
+```<!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Great Idea!</title>
+    <title>Great Idea - Responsive I</title>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      href="https://fonts.googleapis.com/css?family=Bangers%7CTitillium+Web"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/index.css" />
-
-    <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-    <![endif]-->
   </head>
 
   <body>
+    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
     <header>
       <nav>
-        <div>
-          <a href="#">Services</a>
-          <a href="#">Product</a>
-          <a href="#">Vision</a>
-          <a href="#">Features</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-        </div>
-
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </nav>
+      <img src="img/logo.png" />
     </header>
-
     <section class="intro">
-      <div class="getstarted">
+      <div class="intro-content">
         <h1>
-          Innovation <br />
-          On <br />
-          Demand
+          INNOVATION<br />
+          ON<br />
+          DEMAND
         </h1>
         <button>Get Started</button>
       </div>
-
-      <img
-        class="imgcir"
-        src="img/header-img.png"
-        alt="Image of a code snippet."
-      />
+      <img src="img/header-img.png" />
     </section>
-    <hr />
     <section class="main">
-      <div class="features">
-        <h2>Features</h2>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
-          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
-          convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
+      <div class="first">
+        <div>
+          <h2>SOMETEXT</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+            delectus eligendi. Sit est reiciendis, cupiditate rem aut voluptas
+            excepturi, maxime deserunt repellat consequuntur omnis molestiae,
+            distinctio quos beatae dolorum placeat!
+          </p>
+        </div>
+        <div>
+          <h2>SOMETEXT</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+            delectus eligendi. Sit est reiciendis, cupiditate rem aut voluptas
+            excepturi, maxime deserunt repellat consequuntur omnis molestiae,
+            distinctio quos beatae dolorum placeat!
+          </p>
+        </div>
       </div>
 
-      <div class="about">
-        <h2>About</h2>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
-          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
-          convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
-      </div>
+      <img src="img/mid-page-accent.jpg" />
 
-      <img
-        class="middle-img"
-        src="img/mid-page-accent.jpg"
-        alt="Image of code snippets across the screen"
-      />
-
-      <div class="services">
-        <h2>Services</h2>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
-          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
-          convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
-      </div>
-
-      <div class="product">
-        <h2>Product</h2>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
-          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
-          convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
-      </div>
-
-      <div class="vision">
-        <h2>Vision</h2>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
-          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
-          convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
+      <div class="last">
+        <div>
+          <h2>SomeTEXT</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Laboriosam, numquam consequatur. Dolore numquam eligendi minima quis
+            recusandae. Minima eos repellendus cum at distinctio, vero ipsam
+            esse voluptatem repellat deserunt aliquid.
+          </p>
+        </div>
+        <div>
+          <h2>SomeTEXT</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Laboriosam, numquam consequatur. Dolore numquam eligendi minima quis
+            recusandae. Minima eos repellendus cum at distinctio, vero ipsam
+            esse voluptatem repellat deserunt aliquid.
+          </p>
+        </div>
+        <div>
+          <h2>SomeTEXT</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Laboriosam, numquam consequatur. Dolore numquam eligendi minima quis
+            recusandae. Minima eos repellendus cum at distinctio, vero ipsam
+            esse voluptatem repellat deserunt aliquid.
+          </p>
+        </div>
       </div>
     </section>
     <footer>
-      <h2>Contact</h2>
-      <address>
-        123 Way 456 Street Somewhere, USA
-      </address>
-
-      <a>1 (888) 888-8888</a>
-      <a>sales@greatidea.io</a>
-
-      <p>Copyright Great Idea! 2018</p>
+      <p>@COPYRIGHT STUFF</p>
     </footer>
   </body>
 </html>
+``` Jump Message Input Message #web22_help
