--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
     <header>
       <nav>
-        <a href="#">Services</a>
+        <a href="#" class="first-link">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
