--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-```<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -40,7 +40,7 @@
     <section class="main">
       <div class="first">
         <div>
-          <h2>SOMETEXT</h2>
+          <h2>FEATURES</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
             delectus eligendi. Sit est reiciendis, cupiditate rem aut voluptas
@@ -49,7 +49,7 @@
           </p>
         </div>
         <div>
-          <h2>SOMETEXT</h2>
+          <h2>ABOUT</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
             delectus eligendi. Sit est reiciendis, cupiditate rem aut voluptas
@@ -63,7 +63,7 @@
 
       <div class="last">
         <div>
-          <h2>SomeTEXT</h2>
+          <h2>SERVICES</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Laboriosam, numquam consequatur. Dolore numquam eligendi minima quis
@@ -72,7 +72,7 @@
           </p>
         </div>
         <div>
-          <h2>SomeTEXT</h2>
+          <h2>PRODUCT</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Laboriosam, numquam consequatur. Dolore numquam eligendi minima quis
@@ -81,7 +81,7 @@
           </p>
         </div>
         <div>
-          <h2>SomeTEXT</h2>
+          <h2>VISION</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Laboriosam, numquam consequatur. Dolore numquam eligendi minima quis
@@ -90,10 +90,18 @@
           </p>
         </div>
       </div>
-    </section>
-    <footer>
-      <p>@COPYRIGHT STUFF</p>
-    </footer>
+    <div class="address">
+          <h2>Contact</h2>
+          <address>
+         <a>  123 Way 456 Street </a>
+          <a>Somewhere, USA</a>
+          </address>
+    
+          <a>1 (888) 888-8888</a><br>
+          <a>sales@greatidea.io</a>
+        </div>
+        <footer>
+          <p>Copyright Great Idea! 2018</p>
+        </footer>
   </body>
 </html>
-``` Jump Message Input Message #web22_help
